[package]
name = "telegram-antispam-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
mongodb = { version = "2.4", features = ["sync"] }
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
regex = "1.7"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
