[package]
name = "t"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
teloxide = { version = "0.12", features = ["macros", "auto-send"] }
mongodb = { version = "2.8", features = ["tokio-runtime"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"