[dependencies]
teloxide = { version = "0.12", features = ["macros", "auto-send"] }
tokio = { version = "1", features = ["full"] }
mongodb = "2.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
pretty_env_logger = "0.5"
log = "0.4"

rust-bert = { version = "0.21.0", features = ["text-classification"] }
once_cell = "1.18"
regex = "1"