[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros", "auto-send"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
mongodb = "2.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
pretty_env_logger = "0.5"
log = "0.4"
regex = "1"
once_cell = "1.18"
futures-util = "0.3"
ahash = "0.8"  # Faster HashMap
dashmap = "5.5"  # Concurrent HashMap
parking_lot = "0.12"  # Faster Mutex alternative

[profile.release]
# Optimasi untuk performa maksimal
lto = true
codegen-units = 1
panic = "abort"
strip = true